--- a/src/style.css
+++ b/src/style.css
@@ -22,6 +22,15 @@ header {
   align-items: center;
 }
 
+.modal{
+  opacity: 0;
+}
+
+.modal:target{
+  opacity: 1;
+  pointer-events: auto;
+}
+
 .list{
   display: inline-flex;
 }
