modal finalizado, estilização básica

--- a/src/style.css
+++ b/src/style.css
@@ -23,6 +23,11 @@ header {
 }
 
 .modal{
+  position:fixed;
+  background-color: #003563;
+  border: solid 1px white;
+  top: 10%;
+  padding: 10px;
   opacity: 0;
 }
 
