--- a/src/films.css
+++ b/src/films.css
@@ -109,74 +109,46 @@ main {
   text-align: center;
 }
 
-.cardsFilms {
+.cardsFilms{
+  margin: 0 auto;
+  width: 90%;
   display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: center;
+  flex-direction: column;
   align-items: center;
-  font-weight: normal;
 }
-
-.Cards {
-  width: 350px;
-  height: 450px;
-  box-shadow: #003563 0 0 1em;
-  background-color: #003563;
-  margin: 2% 5% 5% 2%;
-  border-radius: 2%;
-  perspective: 1000px;
-}
-
-.cardFlip {
-  height: 350px;
-  height: 450px;
-  transform-style: preserve-3d;
-  transition: transform 0.8s;
-  position: relative;
+.container-cards {
+  background-color: white;
+  box-shadow: 14px 14px rgba(100,100,100,0.5);
+  padding:2rem;
+  box-sizing: border-box;
+  margin-bottom:3rem;
   border-radius: 10px;
-  border-radius: 2%;
-  align-content: center;
-  align-items: center;
-  text-align: center;
+  display:flex;
+  width:100%;
 }
 
-.cardFlip:hover {
-  transform: rotateY(180deg);
+.movie-details{
+  display: flex;
+  flex-direction:column;
+  padding-left: 2rem;
+  width:100%;
+}
+.moveInformation{
+  width:100%;
+  display:flex;
+  flex-direction: column;
+  justify-content:space-around;
 }
 
-.front, .back {
-  backface-visibility: hidden;
-  position: absolute;
-  color: #95bad7;
-  width: 100%;
-  height: 100%;
-
-}
-
-.back {
-  transform: rotateY(180deg);
-  background-color: #003563;
-  border-radius: 10px;
-  color: #bcd0df;
-  width: 350px;
-  height: 450px;
-  font-size: 80%;
-}
 
 .poster {
-  width: 350px;
-  height: 450px;
-  border-radius: 2%;
+  width: 18rem;
+  height: 26rem;
+  border-radius:10px;
 }
 
-.titles {
-  padding-top: 2%;
-  font-size: 1.5vmax;
-}
-
-.infoFilms{
-  padding: 0% 2% ;
+.title, .director, .year, .description, .producer, .score{
+  padding: 7px;
 }
 
 @media  screen and (max-width: 820px){
@@ -205,12 +177,6 @@ main {
   .carac{
     margin: 0% 17% 0% 0%;
   }
-
-  .Cards{
-    width: 70vw;
-    height: 45vh;
-  }
-
   .poster{
     width: 70vw;
     height: 45vh;
@@ -224,15 +190,15 @@ main {
   }
 }
 
-body::-webkit-scrollbar{
+.body::-webkit-scrollbar{
   width: 12px;
 }
 
-body::-webkit-scrollbar-track{
+.body::-webkit-scrollbar-track{
   background-color: darkgray;
 }
 
-body::-webkit-scrollbar-thumb{
+.body::-webkit-scrollbar-thumb{
   background-color: #003563;
   border-radius: 20px;
   border: darkgray solid 1px;
@@ -244,10 +210,3 @@ hr {
   background-color: transparent;
 }
 
-footer {
-  display: flex;
-  background-color: #003563;
-  text-align: center;
-  font-size: 1.2vmax;
-  justify-content: center;
-}
