--- a/src/personagens.css
+++ b/src/personagens.css
@@ -99,6 +99,19 @@ a:hover {
   width: 100%;
   height: 100%;
 }
+.page-characters{
+  font-weight: bold;
+  text-decoration:underline;
+}
+.top-button {
+  position: fixed;
+  width: 150px;
+  height: 150px;
+  bottom: 0px;
+  right: 0px;
+  opacity: 1.0;
+}
+
 
 .card{
   width:250px;
