--- a/src/films.css
+++ b/src/films.css
@@ -116,7 +116,7 @@ main {
   flex-direction: column;
   align-items: center;
 }
-.container-cards {
+.containerCards {
   background-color: white;
   box-shadow: 14px 14px rgba(100,100,100,0.5);
   padding:2rem;
@@ -127,7 +127,7 @@ main {
   width:100%;
 }
 
-.movie-details{
+.movieDetails{
   display: flex;
   flex-direction:column;
   padding-left: 2rem;
