--- a/src/personagens.css
+++ b/src/personagens.css
@@ -2,24 +2,19 @@
 @import url(header.css);
 
 
-body {
+.body {
   background-color: #003563;
   font-family: 'Didact Gothic';
-  color: white;
   overflow-x: hidden;
   max-width: 100%;
   max-height: 100%;
 }
 
 a {
-  text-decoration: none;
-  font-weight: normal;
   font-size: 2vmax;
 }
 
 a:visited {
-  color: white;
-  text-decoration: none;
   font-weight: normal;
 }
 
@@ -28,7 +23,7 @@ a:hover {
 }
 
 .mainPersonagens {
-  display:flex;
+  display: flex;
   margin: auto;
   background-color: #95bad7;
   justify-content: center;
@@ -37,11 +32,11 @@ a:hover {
   flex-wrap: wrap;
 }
 
-.filterCharacters{
+.filterCharacters {
   color: #003563;
   background-color: #95bad7;
   margin: 1vmax;
-  border-radius:5px;
+  border-radius: 5px;
   border: 0.1max solid #003563;
   border-color: #003563;
   height: 2vmax;
@@ -50,28 +45,30 @@ a:hover {
   box-shadow: inset 0 0 0.3em #003563;
 }
 
-.inputCharacters{
+.inputCharacters {
   display: inline-flex;
 }
 
-.inputCharacters::placeholder{
-  color:#003563;
-  text-align:center;
+.inputCharacters::placeholder {
+  color: #003563;
+  text-align: center;
 }
 
 .cardsCharacters {
-  display:flex;
-  flex-direction:row;
+  display: flex;
+  flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
   width: 100%;
   height: 100%;
 }
-.page-characters{
+
+.page-characters {
   font-weight: bold;
-  text-decoration:underline;
+  text-decoration: underline;
 }
+
 .top-button {
   position: fixed;
   width: 150px;
@@ -82,18 +79,18 @@ a:hover {
 }
 
 
-.card{
-  width:250px;
+.card {
+  width: 250px;
   height: 275px;
-  box-shadow:#003563 0 0 1em;
+  box-shadow: #003563 0 0 1em;
   background-color: #003563;
   margin: 2% 5% 5% 2%;
   perspective: 1000px;
 }
 
-.flip-card{
-  width:250px;
-  height:275px;
+.flip-card {
+  width: 250px;
+  height: 275px;
   transform-style: preserve-3d;
   transition: transform 0.8s;
   position: relative;
@@ -103,40 +100,42 @@ a:hover {
   text-align: center;
 }
 
-.flip-card:hover{
-transform: rotateY(180deg);
+.flip-card:hover {
+  transform: rotateY(180deg);
 }
 
 .frontCard,
-.backCard{
+.backCard {
   backface-visibility: hidden;
-  position:absolute;
-  color:#95bad7;
+  position: absolute;
+  color: #95bad7;
   width: 250px;
   height: 275px;
 }
 
-.backCard{
+.backCard {
   transform: rotateY(180deg);
   background-color: #003563;
   border-radius: 10px;
-  color:#bcd0df;
-  width:250px;
-  height:275px;
+  color: #bcd0df;
+  width: 250px;
+  height: 275px;
   font-size: 20px;
 }
 
-.characterPoster{
+.characterPoster {
   width: 250px;
   height: 275px;
   border-radius: 2%;
 
 }
-.nomePersonagem{
+
+.nomePersonagem {
   padding-top: 2%;
   font-size: 1.5vmax;
 }
-.caracPersona{
+
+.caracPersona {
   padding: 0% 2%;
 }
 
@@ -149,15 +148,15 @@ transform: rotateY(180deg);
 
 }
 
-body::-webkit-scrollbar{
+body::-webkit-scrollbar {
   width: 12px;
 }
 
-body::-webkit-scrollbar-track{
+body::-webkit-scrollbar-track {
   background-color: darkgray;
 }
 
-body::-webkit-scrollbar-thumb{
+body::-webkit-scrollbar-thumb {
   background-color: #003563;
   border-radius: 20px;
   border: darkgray solid 1px;
