--- a/src/films.css
+++ b/src/films.css
@@ -53,7 +53,7 @@ main {
   box-shadow: inset 0 0 0.3em #003563;
 }
 
-.resetButton{
+.resetButton {
   color: #003563;
   background-color: #95bad7;
   border-radius: 0.5vmax;
@@ -77,7 +77,7 @@ main {
   text-align: center;
 }
 
-.cardsFilms{
+.cardsFilms {
   margin: 0 auto;
   width: 90%;
   display: flex;
@@ -87,15 +87,17 @@ main {
 
 .containerCards {
   background-color: white;
-  box-shadow: 14px 14px rgba(100,100,100,0.5);
-  padding:2rem;
+  box-shadow: 14px 14px rgba(100, 100, 100, 0.5);
+  padding: 2rem;
   box-sizing: border-box;
-  margin-bottom:3rem;
-
-.page-films{
-  font-weight: bold;
-  text-decoration:underline;
+  margin-bottom: 3rem;
 }
+
+.page-films {
+  font-weight: bold;
+  text-decoration: underline;
+}
+
 .top-button {
   position: fixed;
   width: 150px;
@@ -122,45 +124,52 @@ main {
   transition: transform 0.8s;
   position: relative;
   border-radius: 10px;
-  display:flex;
-  width:100%;
+  display: flex;
+  width: 100%;
 }
 
-.movieDetails{
+.movieDetails {
   display: flex;
-  flex-direction:column;
-  padding-left: 2rem;
-  width:100%;
-}
-.moveInformation{
-  width:100%;
-  display:flex;
   flex-direction: column;
-  justify-content:space-around;
+  padding-left: 2rem;
+  width: 100%;
+}
+
+.moveInformation {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
 }
 
 
 .poster {
   width: 18rem;
   height: 26rem;
-  border-radius:10px;
+  border-radius: 10px;
 }
 
-.title, .director, .year, .description, .producer, .score{
+.title,
+.director,
+.year,
+.description,
+.producer,
+.score {
   padding: 7px;
 }
 
-@media  screen and (max-width: 820px){
-  .back{
+@media screen and (max-width: 820px) {
+  .back {
     font-size: 1.1vh;
   }
 }
 
 @media screen and (max-width: 640px) {
-  .carac{
+  .carac {
     margin: 0% 17% 0% 0%;
   }
-  .poster{
+
+  .poster {
     width: 70vw;
     height: 45vh;
   }
@@ -173,15 +182,15 @@ main {
   }
 }
 
-.body::-webkit-scrollbar{
+.body::-webkit-scrollbar {
   width: 12px;
 }
 
-.body::-webkit-scrollbar-track{
+.body::-webkit-scrollbar-track {
   background-color: darkgray;
 }
 
-.body::-webkit-scrollbar-thumb{
+.body::-webkit-scrollbar-thumb {
   background-color: #003563;
   border-radius: 20px;
   border: darkgray solid 1px;
@@ -192,4 +201,3 @@ hr {
   height: 2vh;
   background-color: transparent;
 }
-
