--- a/src/style.css
+++ b/src/style.css
@@ -59,52 +59,153 @@ a:hover {
 }
 
 main{
-  background-color: #95bad7;
-}
-
-.imagemChihiro {
+  width: 100%;
   display: flex;
-  float: center;
-  width: auto;
-  width: 70vw;
-  max-height: max-content;
-  margin: auto;
-  border: solid #003563 0px 10px 0px 10px;
-  box-shadow: #003563 0 0 1em;
+  flex-direction: column;
+  justify-content: center;
+  justify-items: center;
+  align-items: center;
+  text-align: center;
 }
 
-@media screen and (max-width: 640px) {
-  header{
-    width: 100%;
-    justify-content: space-between;
-    margin-bottom: 2%;
+.carrosel{
+  width: 800px;
+  height: 450px;
+  margin: 50px auto;
+  box-shadow: 10px 10px 15px rgba(0,0,0,0.7);
+  overflow: hidden;
+  border-radius: 3%;
+}
+
+.carrosel ul{
+  display: flex;
+  list-style: none;
+  width: 4800px;
+  height: 450px;
+}
+
+.carrosel li{
+  position: relative;
+  animation: slide 20s infinite ease-out;
+}
+
+@keyframes slide {
+  0%{left: 0px}
+  15%{left: 0px}
+  20%{left: -800px}
+  35%{left: -800px}
+  40%{left: -1600px}
+  55%{left: -1600px}
+  60%{left: -2400px}
+  75%{left: -2400px}
+  80%{left: -3200px}
+  95%{left: -3200px}
+  100%{left: 0px}
+}
+
+img{
+  width: 800px;
+  height: 450px;
+}
+
+.about{
+  margin: 0% 20%;
+}
+
+h1{
+  margin-bottom: 3%;
+}
+
+@media(max-width:1120px){
+  .carrosel{
+    width: 600px;
+    height: 350px;
   }
 
-  .logo{
-    width: 35vw;
-    height: auto;
-    margin-right: 10px;
+  .carrosel ul{
+    width: 3600px;
+    height: 350px;
   }
 
-  .content{
-    margin: 0% 10%;
-    max-width: 30%;
+  img{
+    width: 600px;
+    height: 350px;
   }
 
-  .carac{
-    margin: 0% 17% 0% 0%;
+  @keyframes slide {
+    0%{left: 0px}
+    15%{left: 0px}
+    20%{left: -600px}
+    35%{left: -600px}
+    40%{left: -1200px}
+    55%{left: -1200px}
+    60%{left: -1800px}
+    75%{left: -1800px}
+    80%{left: -2400px}
+    95%{left: -2400px}
+    100%{left: 0px}
+  }
+}
+
+@media(max-device-width:710px){
+  .carrosel{
+    width: 470px;
+    height: 300px;
   }
 
-  main{
-    height: auto;
-    width: 100vw;
-    justify-content: center;
+  .carrosel ul{
+    width: 2820px;
+    height: 300px;
   }
 
-  .imagemChihiro{
-    margin: auto;
-    width: 100vw;
-    height: auto;
+  img{
+    width: 470px;
+    height: 300px;
+  }
+
+  @keyframes slide {
+    0%{left: 0px}
+    15%{left: 0px}
+    20%{left: -470px}
+    35%{left: -470px}
+    40%{left: -940px}
+    55%{left: -940px}
+    60%{left: -1410px}
+    75%{left: -1410px}
+    80%{left: -1880px}
+    95%{left: -1880px}
+    100%{left: 0px}
+  }
+}
+
+@media(max-device-width:530px){
+  .carrosel{
+    width: 270px;
+    height: 200px;
+  }
+
+  .carrosel ul{
+    width: 1620px;
+    height: 200px;
+  }
+
+  img{
+    width: 270px;
+    height: 200px;
+  }
+
+  @keyframes slide {
+    0%{left: 0px}
+    15%{left: 0px}
+    20%{left: -270px}
+    35%{left: -270px}
+    40%{left: -540px}
+    55%{left: -540px}
+    60%{left: -810px}
+    75%{left: -810px}
+    80%{left: -1080px}
+    95%{left: -1080px}
+    100%{left: 0px}
   }
 }
 
