--- a/src/style.css
+++ b/src/style.css
@@ -2,16 +2,16 @@
 @import url(reset.css);
 
 .body {
-  background-color: #003563;
   font-family: 'Didact Gothic';
   overflow-x: hidden;
-  max-width: 100%;
-  max-height: 100%;
+  width: 100%;
+  height: 100vh;
+  background: #C3DBC2;
 }
 
 .modal {
   position: fixed;
-  background-color: #003563;
+  background-color: #C3DBC2;
   border: solid 1px white;
   top: 10%;
   padding: 10px;
@@ -26,10 +26,12 @@
 main{
   display: flex;
   flex-direction: column;
-  color: white;
+  color: black;
   justify-content: center;
   align-items: center;
   text-align: center;
+  background: white;
+  height: 85vh;
 }
 .carrosel{
   width: 800px;
@@ -72,7 +74,7 @@ ul li img{
 }
 
 .about{
-  margin: 0% 20%;
+  margin: 0% 20% ;
 }
 
 h1{
@@ -152,7 +154,7 @@ h1{
     height: 200px;
   }
 
-  img{
+  ul li img{
     width: 270px;
     height: 200px;
   }
@@ -178,10 +180,21 @@ hr {
   background-color: transparent;
 }
 
+footer a {
+  text-decoration: none;
+  color: black;
+}
+
+.footerText:hover{
+  font-weight: bold;
+}
+
 footer {
   display: flex;
-  background-color: #003563;
+  background-color: #C3DBC2;
   text-align: center;
   font-size: 1.2vmax;
   justify-content: center;
+  height: 3%;
+  align-items: flex-end;
 }
