--- a/src/header.css
+++ b/src/header.css
@@ -6,7 +6,7 @@
   justify-content: space-between;
   padding: 1%;
   box-shadow: 1px 10px 10px var(--black);
-  background: #C3DBC2;
+  background: var(--main);
 }
 
 .logoImage {
