--- a/src/style.css
+++ b/src/style.css
@@ -5,7 +5,7 @@
   font-family: 'Didact Gothic';
   overflow-x: hidden;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   background: var(--main);
 }
 
@@ -36,7 +36,8 @@
   align-items: center;
   text-align: center;
   background: var(--white);
-  height: 85vh;
+  height: 85%;
+  padding-bottom: 3%;
 }
 
 .carrosel {
