--- a/src/personagens.css
+++ b/src/personagens.css
@@ -59,20 +59,20 @@
 
 .card {
   width: 250px;
-  height: 405px;
-  box-shadow: #003563 0 0 1em;
-  background-color: #003563;
+  height: 410px;
+  box-shadow: var(--main) 0 0 1em;
+  background-color: var(--abacate);
   margin: 2% 5% 5% 2%;
   perspective: 1000px;
   border-radius: 2%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  color: white;
+  color: var(--marrom);
 }
 
 .characterPoster {
-  margin-top: 2%;
+  margin-top: 6%;
   width: 200px;
   height: 175px;
   border-radius: 2%;
