--- a/src/personagens.css
+++ b/src/personagens.css
@@ -3,7 +3,7 @@
 
 
 .body {
-  background-color: #003563;
+  background-color: var(--white);
   font-family: 'Didact Gothic';
   overflow-x: hidden;
   max-width: 100%;
@@ -18,7 +18,7 @@
 .mainPersonagens {
   display: flex;
   margin: auto;
-  background-color: #95bad7;
+  background-color: var(--white);
   justify-content: center;
   justify-items: center;
   min-height: 70vh;
@@ -26,16 +26,15 @@
 }
 
 .filterCharacters {
-  color: #003563;
-  background-color: #95bad7;
+  color: var(--black);
+  background-color: var(--main);
   margin: 1vmax;
   border-radius: 5px;
-  border: 0.1max solid #003563;
-  border-color: #003563;
+  border: 0.1max solid var(--marrom);
   height: 2vmax;
   font-size: 1vmax;
   text-align: center;
-  box-shadow: inset 0 0 0.3em #003563;
+  box-shadow: inset 0 0 0.3em var(--abacate);
 }
 
 .inputCharacters {
@@ -43,7 +42,7 @@
 }
 
 .inputCharacters::placeholder {
-  color: #003563;
+  color: var(--black);
   text-align: center;
 }
 
@@ -91,16 +90,7 @@
 
 .top-button {
   position: fixed;
-  width: 150px;
-  height: 150px;
-  bottom: 0px;
-  right: 0px;
-  opacity: 1.0;
-}
-
-.top-button {
-  position: fixed;
-  width: 150px;
+  width: 170px;
   height: 150px;
   bottom: 0px;
   right: 0px;
@@ -129,7 +119,7 @@ body::-webkit-scrollbar-track {
 }
 
 body::-webkit-scrollbar-thumb {
-  background-color: #003563;
+  background-color: var(--main);
   border-radius: 20px;
   border: darkgray solid 1px;
 }
