--- a/src/personagens.css
+++ b/src/personagens.css
@@ -60,14 +60,15 @@
   width: 250px;
   height: 410px;
   box-shadow: var(--main) 0 0 1em;
-  background-color: var(--abacate);
+  background-color: var(--main);
+  border: 0.1vmax solid var(--abacate);
   margin: 2% 5% 5% 2%;
   perspective: 1000px;
   border-radius: 2%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  color: var(--marrom);
+  color: var(--black);
 }
 
 .characterPoster {
@@ -75,7 +76,7 @@
   width: 200px;
   height: 175px;
   border-radius: 2%;
-  border: #95bad7 solid 1px;
+  border: var(--abacate) solid 1px;
 }
 
 .nomePersonagem {
