--- a/style.css
+++ b/style.css
@@ -5,13 +5,13 @@
   font-family: 'Didact Gothic';
   overflow-x: hidden;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   background: var(--main);
 }
 
 .page-index {
   font-weight: bold;
-  text-decoration: underlin
+  text-decoration: underline;
 }
 
 .modal {
@@ -36,7 +36,8 @@
   align-items: center;
   text-align: center;
   background: var(--white);
-  height: 85vh;
+  height: 85%;
+  padding-bottom: 3%;
 }
 
 .carrosel {
@@ -256,7 +257,7 @@ h1 {
     height: 200px;
   }
 
-  ul li img{
+  ul li img {
     width: 270px;
     height: 200px;
   }
@@ -314,12 +315,11 @@ hr {
   background-color: transparent;
 }
 
-footer a {
-  text-decoration: none;
+.footerText {
   color: black;
 }
 
-.footerText:hover{
+.footerText:hover {
   font-weight: bold;
 }
 
