--- a/films.css
+++ b/films.css
@@ -6,6 +6,7 @@
   overflow-x: hidden;
   width: 100%;
   height: 100%;
+  background-color: var(--white);
 }
 
 a:visited {
@@ -205,6 +206,16 @@ main {
   .top-button {
     width: 30%;
     height: 15%;
+  }
+
+  .filterFilms{
+    font-size: 0.7rem;
+    padding: 1%;
+    height: 4vmax;
+  }
+
+  .filterFilms::placeholder{
+    font-size: 0.7rem;
   }
 }
 
