--- a/src/style.css
+++ b/src/style.css
@@ -6,7 +6,7 @@
   overflow-x: hidden;
   width: 100%;
   height: 100%;
-  background:var(--white);
+  background: var(--white);
 }
 
 .page-index {
@@ -308,8 +308,8 @@ h1 {
     }
   }
 
-  footer a{
-    font-size: .8rem;
+  footer a {
+    font-size: 1rem;
     margin-bottom: 2%;
   }
 }
@@ -332,7 +332,7 @@ footer {
   display: flex;
   background-image: linear-gradient(to bottom, #C3DBC2, #edf5ed);
   text-align: center;
-  font-size: 1.2vmax;
+  font-size: 1.2rem;
   justify-content: center;
   height: 5vh;
   align-items: flex-end;
