--- a/personagens.css
+++ b/personagens.css
@@ -25,14 +25,34 @@
   flex-wrap: wrap;
 }
 
+.filterOrder {
+  display: flex;
+  justify-content: center;
+  justify-items: center;
+  flex-wrap: wrap;
+}
+
+.percentage {
+  display: flex;
+  justify-content: center;
+  justify-items: center;
+  flex-wrap: wrap;
+  height: 30px;
+  width: 100%;
+}
+
+.p-percentage {
+  height: 100%;
+}
+
 .filterCharacters {
   color: var(--black);
   background-color: var(--main);
   margin: 1vmax;
   border-radius: 5px;
   border: 0.1max solid var(--marrom);
-  height: 2vmax;
-  font-size: 1vmax;
+  height: 4vmax;
+  font-size: 2vmax;
   text-align: center;
   box-shadow: inset 0 0 0.3em var(--abacate);
 }
@@ -109,13 +129,13 @@
     font-size: 1.2rem;
   }
 
-  .filterCharacters{
-    font-size: 0.7em;
+  .filterCharacters {
+    font-size: 1rem;
     height: 4vmax;
   }
 
-  .filterCharacters::placeholder{
-    font-size: 0.7rem;
+  .filterCharacters::placeholder {
+    font-size: 1rem;
   }
 
 }
@@ -138,12 +158,4 @@ hr {
   width: 100vw;
   height: 2vh;
   background-color: transparent;
-}
-
-footer {
-  display: flex;
-  background-color: #003563;
-  text-align: center;
-  font-size: 1.2vmax;
-  justify-content: center;
 }
