--- a/films.css
+++ b/films.css
@@ -57,7 +57,7 @@ main {
   border-radius: 5px;
   border: 0.1vmax solid var(--abacate);
   width: auto;
-  height: 4vmax;
+  height: 30px;
   font-size: 2vmax;
   text-align: center;
   box-shadow: inset 0 0 0.3em var(--abacate);
@@ -93,7 +93,7 @@ main {
   background-color: var(--main);
   box-shadow: 14px 14px rgba(100, 100, 100, 0.5);
   border: solid var(--abacate);
-  border-radius: 10px;
+  border-radius: 5px;
   padding: 2rem;
   box-sizing: border-box;
   margin-bottom: 3rem;
@@ -212,7 +212,7 @@ main {
 
   .filterFilms {
     font-size: 1rem;
-    height: 4vmax;
+    height: 30px;
     padding: 1%;
   }
 
