--- a/src/films.css
+++ b/src/films.css
@@ -33,6 +33,7 @@ main {
   justify-content: center;
   justify-items: center;
   flex-wrap: wrap;
+  text-align: center;
 }
 
 .percentage {
@@ -58,7 +59,7 @@ main {
   border: 0.1vmax solid var(--abacate);
   width: auto;
   height: 30px;
-  font-size: 2vmax;
+  font-size: 1.5vmax;
   text-align: center;
   box-shadow: inset 0 0 0.3em var(--abacate);
 }
