--- a/src/personagens.css
+++ b/src/personagens.css
@@ -30,6 +30,7 @@
   justify-content: center;
   justify-items: center;
   flex-wrap: wrap;
+  text-align: center;
 }
 
 .percentage {
@@ -52,7 +53,7 @@
   border-radius: 5px;
   border: 0.1max solid var(--marrom);
   height: 30px;
-  font-size: 2vmax;
+  font-size: 1.5vmax;
   text-align: center;
   box-shadow: inset 0 0 0.3em var(--abacate);
 }
